<resources>
    <string name="app_name">Linguini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="login">Login</string>
    <string name="yourEmail">Your Email</string>
    <string name="yourPassword">Your Password</string>
    <string name="dosntHaveAcc">Doesn`t have an account? Sign UP</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnLogin">Login</string>
    <string name="btnSkip">Skip</string>
    <string name="sginUp">Sign Up</string>
    <string name="yourName">Your Name</string>
    <string name="reEnterYourPassword">Re-enter Your Password</string>
    <string name="Alreadyhaveanacc">Already have an account? Log In</string>
    <string name="btncontinue">Continue</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="my_plan">My Plan</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="webClientID">922744671758-aor1dh5d8d1i9q3rgn4lu89pa8a4dqf3.apps.googleusercontent.com</string>
    <string name="welcomeCute">Welcome Cute ^_^</string>
    <string name="yourEmailis">Your Email is:</string>
    <string name="userAcc">hello.anas07@gmail.com</string>
    <string name="logOut">Log Out</string>
    <string name="mealOfTheDay">Linguini Inspiration ^_^</string>
    <string name="categoryOfIngredients">Category Of Ingredients</string>
    <string name="categoryMeal">Meal Categories</string>
    <string name="categoryOfCountry">category Of Country</string>
    <string name="beautiful">"beuteful: "</string>
    <string name="Beautiful">"Beautiful: "</string>
    <string name="Custard">Custard</string>
    <string name="Digestive">Digestive Biscuits</string>
    <string name="Egg">Egg</string>
    <string name="Almonds">Almonds</string>
    <string name="Ingredient">Ingredient :</string>
    <string name="strInstructions">Preheat oven to 350° F. Spray a 9x13-inch baking pan with non-stick spray.\\r\\nCombine soy sauce, ½ cup water, brown sugar, ginger and garlic in a small saucepan and cover. Bring to a boil over medium heat. Remove lid and cook for one minute once boiling.\\r\\nMeanwhile, stir together the corn starch and 2 tablespoons of water in a separate dish until smooth. Once sauce is boiling, add mixture to the saucepan and stir to combine. Cook until the sauce starts to thicken then remove from heat.\\r\\nPlace the chicken breasts in the prepared pan. Pour one cup of the sauce over top of chicken. Place chicken in oven and bake 35 minutes or until cooked through. Remove from oven and shred chicken in the dish using two forks.\\r\\n*Meanwhile, steam or cook the vegetables according to package directions.\\r\\nAdd the cooked vegetables and rice to the casserole dish with the chicken. Add most of the remaining sauce, reserving a bit to drizzle over the top when serving. Gently toss everything together in the casserole dish until combined. Return to oven and cook 15 minutes. Remove from oven and let stand 5 minutes before serving. Drizzle each serving with remaining sauce. Enjoy!</string>
    <string name="Instructions">Instructions :</string>
    <string name="Salt">Salt</string>
    <string name="PepperB">Pepper black</string>
    <string name="Butter">Butter</string>
    <string name="Oliveoil">Olive oil</string>
    <string name="PepperW">Pepper white</string>
    <string name="sugar">Sugar</string>
    <string name="Allpurposeflour">All-purpose flour</string>
    <string name="granulated">"granulated "</string>
    <string name="SugarB">Sugar brown</string>


</resources>